2004-12-21  Eric B. Weddington  <ericw@evcohs.com>

	* include/avr/iom32.h: Add USART* signal names to match datasheet.
	[Fix for bug #11315]

2004-12-20  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/examples/demo/Makefile: Default to an ATmega8 now.

2004-12-20  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.in: Enable man page building.
	* doc/api/Makefile.am: (ditto)
	* doc/api/doxygen.config.in: (ditto)
	* scripts: new directory 
	* scripts/avr-man.in: Wrapper script for man(1).
	* scripts/Makefile.am: Link avr-man.in into the build.
	* Makefile.am: Include the scripts subdir.

2004-12-19  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/delay.h: Document the inline functions; implement
	the macros mentioned in TODO.
	* doc/TODO: Delete the respective TODO item.

2004-12-15  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libm/fplib/fp_split.S: Clear r1 (__zero_reg__) upon NaN.
	Fix for (serious) savannah bug #7667.

2004-12-14  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/stdlib.h: Cosmetical doc change (for atof()).

2004-11-24  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.

	* configure.in:
	* include/avr/io.h:
	Add support for mega165, mega325, mega3250, mega645 and mega6450.

2004-11-18  Eric B. Weddington  <ericw@evcohs.com>

	* include/avr/iotn26.h: Replace file.
	This file is replaced to conform to the license since the original
	author could not be contacted. The new file matches the latest
	data sheet from Atmel.
	* AUTHORS: Updated.

2004-11-18  Eric B. Weddington  <ericw@evcohs.com>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.

	* include/avr/iom16.h: Replace file.
	This file is replaced to conform to the license since the original
	author could not be contacted. The new file matches the latest
	data sheet from Atmel.
	* AUTHORS: Updated.

2004-11-12  Theodore A. Roth  <troth@openavr.org>

	* doc/LICENSE-Changes/PERM-Bob-Paddock:
	* doc/LICENSE-Changes/PERM-Colin-OFlynn: